converting actionId to decimal

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           timestamp: new Date(message.line[1]),
           actorId: parseInt(message.line[2], 16),
           actorName: message.line[3],
-          actionId: message.line[4],
+          actionId: parseInt(message.line[4], 16),
           actionName: message.line[5],
           targetId: parseInt(message.line[6], 16),
           targetName: message.line[7],
@@ -384,7 +384,7 @@
           timestamp: new Date(message.line[1]),
           actorId: parseInt(message.line[2], 16),
           actorName: message.line[3],
-          actionId: message.line[4],
+          actionId: parseInt(message.line[4], 16),
           actionName: message.line[5],
           targetId: parseInt(message.line[6], 16),
           targetName: message.line[7],
@@ -415,7 +415,7 @@
           raw: message,
           messageType: message.line[0],
           timestamp: new Date(message.line[1]),
-          actionId: message.line[2],
+          actionId: parseInt(message.line[2], 16),
           actionName: message.line[3],
           duration: message.line[4],
           actorId: parseInt(message.line[5], 16),
@@ -470,7 +470,7 @@
           raw: message,
           messageType: message.line[0],
           timestamp: new Date(message.line[1]),
-          actionId: message.line[2],
+          actionId: parseInt(message.line[2], 16),
           actionName: message.line[3],
           duration: message.line[4],
           actorId: parseInt(message.line[5], 16),
