--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
       }
 
       function addActor(actorId, actorName){
-        if(!actors[actorId]){
+        if(actors[actorId] === undefined){
           const newOption = document.createElement('option');
           newOption.value = actorId;
           newOption.innerHTML = `${actorName} (${actorId})`;
@@ -639,7 +639,7 @@
       }
 
       function addTarget(targetId, targetName){
-        if(!targets[targetId]){
+        if(targets[targetId] === undefined){
           const newOption = document.createElement('option');
           newOption.value = targetId;
           newOption.innerHTML = `${targetName} (${targetId})`;
@@ -650,7 +650,7 @@
       }
 
       function addAction(actionId, actionName){
-        if(!actions[actionId]){
+        if(actions[actionId] === undefined){
           const newOption = document.createElement('option');
           newOption.value = actionId;
           newOption.innerHTML = `${actionName} (${actionId})`;
@@ -661,14 +661,14 @@
       }
 
       function addEffect(effectId, effectName){
-        if(!actions[effectId]){
+        if(effects[effectId] === undefined){
           const newOption = document.createElement('option');
           newOption.value = effectId;
           newOption.innerHTML = `${effectName} (${effectId})`;
           document.getElementById('inputEffectIdDropdown').appendChild(newOption);
         }
         // Sometimes effectName comes back null but effectId won't
-        actions[effectId] = effectName ? effectName : '';
+        effects[effectId] = effectName ? effectName : '';
       }
 
       function shouldHideElement(element){
