--- a/index.html
+++ b/index.html
@@ -1389,7 +1389,7 @@
 
         // Actor applying the effect to the target
         const friendlyActorElement = document.createElement('span');
-        let friendlyText = `<b>${message.actorName}</b> removed <b>${message.actionName}</b> from <b>${message.targetName}</b>`;
+        let friendlyText = `<b>${message.actorName}</b> removed <b>${message.effectName}</b> from <b>${message.targetName}</b>`;
         friendlyActorElement.innerHTML = friendlyText;
         friendlyViewElement.appendChild(friendlyActorElement);
 
